--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
 			"url":"https://github.com/bit3/php-RemoteObjects"
 		}
 	],
-	"config": {
-		"bin-dir": "bin"
-	}
+	"bin": [
+		"bin/contaoctl"
+	]
 }
