--- a/composer.json
+++ b/composer.json
@@ -1,48 +1,38 @@
 {
-	"name":"bit3/contao-management-api",
-	"description":"The contao management api.",
-	"version":"1.0.0-dev",
-	"homepage":"http://contao-cloud.com",
-	"license":"",
-	"authors":[
+	"name": "bit3/contao-management-console",
+	"description": "The Contao Open Source CMS Managemenet Console.",
+	"version": "1.0.0-dev",
+	"homepage": "http://contao-cloud.com",
+	"license": "LGPL-3.0+",
+	"authors": [
 		{
-			"name":"Tristan Lins",
-			"email":"tristan.lins@bit.de",
-			"homepage":"http://bit3.de",
-			"role":"Developer"
+			"name": "Tristan Lins",
+			"email": "tristan.lins@bit.de",
+			"homepage": "http://bit3.de",
+			"role": "Developer"
 		}
 	],
 	"support": {
-		"email":"info@bit3.de",
-		"issues":"https://github.com/bit3/contao-management-api/issues",
-		"wiki":"https://github.com/bit3/contao-management-api/wiki",
-		"source":"https://github.com/bit3/contao-management-api"
+		"email": "info@bit3.de",
+		"issues": "https://github.com/bit3/contao-management-console/issues",
+		"wiki": "https://github.com/bit3/contao-management-console/wiki",
+		"source": "https://github.com/bit3/contao-management-console"
 	},
 	"require": {
-        "bit3/remote-objects":"@dev",
-        "filicious/filicious":"@dev",
-		"symfony/console":"2.*",
-		"phpseclib/phpseclib":"0.3.*",
-		"monolog/monolog":"1.*"
+		"symfony/console": "2.3.*",
+		"phpseclib/phpseclib": "0.3.*",
+		"monolog/monolog": "~1.3",
+		"bit3/remote-objects": "~1.2",
+		"filicious/core": "0.9.*"
 	},
 	"require-dev": {
-		"phpunit/phpunit":"3.*"
+		"phpunit/phpunit": "3.*"
 	},
-	"autoload":{
-		"psr-0":{
-			"ContaoManagementApi":"src"
+	"autoload": {
+		"psr-0": {
+			"ContaoManagementApi": "src"
 		}
 	},
-	"repositories":[
-		{
-			"type":"vcs",
-			"url":"https://github.com/Filicious/FiliciousCore"
-		},
-		{
-			"type":"vcs",
-			"url":"https://github.com/bit3/php-RemoteObjects"
-		}
-	],
 	"bin": [
 		"bin/contaoctl"
 	]
