--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,13 @@
 		"filicious/core": "0.9.*"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "3.*"
+		"phpunit/phpunit":"3.7.*",
+		"bit3/php-coding-standard":"2.*"
 	},
 	"autoload": {
 		"psr-0": {
-			"ContaoManagementConsole": "src"
+			"ContaoManagementConsole": "src/",
+			"ContaoManagementConsole\\Test": "test/"
 		}
 	},
 	"bin": [
